--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview", 
-    "test" : "vitest"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "happy-dom": "^14.10.1",
     "lucide-vue-next": "^0.378.0",
     "radix-vue": "^1.7.3",
     "tailwind-merge": "^2.3.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20.12.8",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
