--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test-ui": "vitest --ui"
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^20.12.8",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/ui": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "tailwindcss": "^3.4.3",
